Paginas informativas terminadas. Pendiente revisar detalles en diseño

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,24 @@
 {
     "cSpell.words": [
         "appspot",
+        "Beinecke",
         "davys",
+        "DEIB",
         "descripcion",
+        "duplicadora",
         "firebaseapp",
         "Funcion",
         "galeria",
         "Kraxi",
+        "plurianual",
+        "pregrado",
         "Publicacion",
         "RSWQ",
+        "serigrafía",
+        "subrepresentadas",
         "toastr",
         "Toastr",
+        "Vandercook",
         "yale"
     ]
 }
