--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "descripcion",
         "duplicadora",
         "firebaseapp",
+        "Firestore",
         "Funcion",
         "galeria",
         "Kraxi",
