--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "plurianual",
         "pregrado",
         "Publicacion",
+        "Reseted",
         "RSWQ",
         "serigrafía",
         "subrepresentadas",
